--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,32 @@ header {
 nav ul {
   display: flex;
   list-style: none;
+  align-items: center;
 }
 nav ul#userInfo {
   display: none;
+}
+#userInfo li {
+  position: relative;
+  margin: 0 10px;
+}
+#userInfo li i {
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+}
+#userInfo li .badge {
+  width: 20px;
+  height: 20px;
+  background-color: #f00;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 50%;
+  font-size: 10px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
 }
 nav li a {
   display: block;
